--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,7 +1,10 @@
 @import "./base/variables_operaciones";
 @import "./base/generales";
 @import "./components/header";
-@import "./components/main";
+@import "./components/inicio";
+@import "./components/preguntas";
+@import "./components/nosotros";
+@import "./components/contacto";
 @import "./components/footer";
 @import "./base/mediaquery";
 
